UtahLiveDataTest/src/objects/AwardServiceArea__c.object
<CustomObject>
    <description>[Business] Associates the Service Area with the Award</description>
    <fields>
        <fullName>Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipName>Award_Service_Areas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DirectAdjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Direct Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DirectAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Direct Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HideEdit__c</fullName>
        <formula>OR(
  AND(
    $User.Id != Award__r.ProjectOfficer__c,
    $User.Id != Award__r.GrantMonitor__c,
    $User.Id != Award__r.DataEvaluator__c,
    $User.Id != Award__r.ProgramManager__c
  ),
  NOT(ISPICKVAL(Award__r.Status__c, &apos;Drafted&apos;)),
  AND(
    NOT(CONTAINS(Award__r.Amendments__c,&apos;Award Increase/Decrease&apos;)),
    NOT(CONTAINS(Award__r.Amendments__c,&apos;Cost-Extension&apos;)),
    NOT(CONTAINS(Award__r.Amendments__c,&apos;Budget Revision&apos;)),
    NOT(ISBLANK(Award__r.Amendments__c))
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IndirectAdjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Indirect Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IndirectAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Indirect Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Area</label>
        <referenceTo>ServiceArea__c</referenceTo>
        <relationshipName>AwardServiceAreas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <formula>Amount__c + DirectAmount__c + IndirectAmount__c + Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Award Project Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>TotalAmount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AWSA-{0000}</displayFormat>
        <label>Award Service Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Award Project Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>